# rust-mpd

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  rustfmt.toml  search-index.js
.github/workflows/: ci.yml
benches/: helpers.rs  options.rs
bufstream/: index.html  struct.BufStream.html  struct.IntoInnerError.html
examples/: example.rs
mpd/: index.html  sidebar-items.js
mpd/client/: index.html  sidebar-items.js  struct.Client.html
mpd/error/: ProtoError.t.html  ServerError.t.html  enum.Error.html  enum.ErrorCode.html  enum.ParseError.html  enum.ProtoError.html  index.html  sidebar-items.js  struct.ServerError.html  type.Result.html
mpd/idle/: Idle.t.html  IdleGuard.t.html  Subsystem.t.html  enum.Subsystem.html  index.html  sidebar-items.js  struct.IdleGuard.html  trait.Idle.html
mpd/message/: index.html  sidebar-items.js  struct.Channel.html  struct.Message.html
mpd/mount/: Mount.t.html  Neighbor.t.html  index.html  sidebar-items.js  (+2 more)
src/: client.rs  common.rs  connection.rs  convert.rs  error.rs  idle.rs  lib.rs  macros.rs  message.rs  mount.rs  output.rs  outputs.rs  playlist.rs  playlists.rs  plugin.rs  proto.rs  queue.rs  replaygain.rs  reply.rs  search.rs  settings.rs  song.rs  songs.rs  stats.rs  status.rs  sticker.rs  tags.rs  testrun.rs  traits.rs  utils.rs  version.rs
tests/: helpers.rs  idle.rs  options.rs  outputs.rs  playback.rs  playlist.rs  reflect.rs  search.rs  song.rs  status.rs  stickers.rs
time/: enum.ParseError.html  fn.at.html  fn.at_utc.html  fn.empty_tm.html  fn.get_time.html  fn.now.html  fn.now_utc.html  fn.precise_time_ns.html  fn.precise_time_s.html  fn.strftime.html  fn.strptime.html  fn.tzset.html  index.html  struct.Duration.html  struct.OutOfRangeError.html  struct.PreciseTime.html  struct.SteadyTime.html  struct.Timespec.html  struct.Tm.html  struct.TmFmt.html
(+94 files in other folders)
