[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "A client library for MPD (music player daemon), like libmpdclient but in Rust"
documentation = "http://kstep.me/rust-mpd/mpd/index.html"
homepage = "https://github.com/kstep/rust-mpd"
license = "MIT/Apache-2.0"
name = "mpd"
repository = "https://github.com/kstep/rust-mpd.git"
version = "0.1.0"
edition = "2018"

[dependencies]
bufstream = { version = "0.1", default-features = false }

[dev-dependencies]
tempdir = "0.3.5"
unix_socket = "0.5.0"
