[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "A client library for MPD (music player daemon), like libmpdclient but in Rust"
documentation = "http://kstep.me/rust-mpd/mpd/index.html"
homepage = "https://github.com/kstep/rust-mpd"
license = "MIT/Apache-2.0"
name = "mpd"
repository = "https://github.com/kstep/rust-mpd.git"
version = "0.1.0"
edition = "2018"

[dependencies]
bufstream = { version = "0.1", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_repr = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.8.1"
unix_socket = "0.5.0"

[features]
serde = ["dep:serde", "dep:serde_repr"]
